maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:7: error: not found: value estBiscuit
while (!estBiscuit) {
        ^Escaper:14: error: not found: value sommeAngle
	} while (sommeAngle() != 0)
                 ^Escaper:28: error: not found: value sommeAngle
var sommeAngle():Int = 0
    ^Escaper:34: error: not found: value sommeAngle
			sommeAngle() += 1
                        ^Escaper:37: error: not found: value sommeAngle
			sommeAngle() -= 1
                        ^Escaper:41: error: not found: value sommeAngle
			sommeAngle() -= 2
                        ^