maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {


var origine:Direction = getDirection()

while (!estBiscuit) {
	origine = getDirection()
	do {
		if (!estFaceMur) {
			courirNord()
		}
		longerMur()
	} while (sommeAngle() != 0)
	
}

def courirNord() {
	setDirection(Direction.NORTH)
		while (!estFaceMur) {
			avance()
		}
		gauche()
}


def longerMur() {	
var sommeAngle():Int = 0
	
		if (murDroite() && !estFaceMur) {
			avance()		
		} else if (murDroite() && estFaceMur) {
			gauche()
			sommeAngle() += 1
		} else if (!murDroite()) {
			droite() 
			sommeAngle() -= 1
			avance()
		} else {
			droite();droite()	
			sommeAngle() -= 2
		}
}

def murDroite():Boolean = {
	droite()
	if (!estFaceMur) {
		gauche()
		return false
	} else {
		gauche()
		return true
	}	
}

}
	

